--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -13,7 +13,7 @@ style.
 
 
 h1 Portfolio
-.content
+.content.portfolio
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-cherry-blossom-ring-in-zen-garden.jpg' style=' width: 100%; height: auto;')
