--- a/src/web/iframes/case_studies.pug
+++ b/src/web/iframes/case_studies.pug
@@ -1,6 +1,7 @@
 ---
 permalink: "iframes/case_studies.html"
 dynamicPermalink: false
+eleventyExcludeFromCollections: true
 ---
 
 extends ../../templates/1999_iframe.pug
