--- a/src/web/iframes/about_us.pug
+++ b/src/web/iframes/about_us.pug
@@ -1,6 +1,7 @@
 ---
 permalink: "iframes/about_us.html"
 dynamicPermalink: false
+eleventyExcludeFromCollections: true
 ---
 
 extends ../../templates/1999_iframe.pug
