--- a/src/web/iframes/portfolio.pug
+++ b/src/web/iframes/portfolio.pug
@@ -1,6 +1,8 @@
 ---
 permalink: "iframes/portfolio.html"
 dynamicPermalink: false
+eleventyExcludeFromCollections: true
+
 ---
 
 extends ../../templates/1999_iframe.pug
