--- a/src/web/sitemap.pug
+++ b/src/web/sitemap.pug
@@ -10,3 +10,4 @@ urlset(xmlns="http://www.sitemaps.org/schemas/sitemap/0.9")
     each page in collections.all
         url
             loc=page.url
+            lastmod=page.date.toISOString()
