Adding footer links

--- a/src/templates/1999_layout.pug
+++ b/src/templates/1999_layout.pug
@@ -75,18 +75,62 @@
     .content_container.footer
         .content
             if ! isIframe
-                .row.center
+                .row
                     .narrow-column
                         h3 About us
                         a(href='/about_us.html') Meet the team
                         br
                         a(href='/about_us.html') Our values
+                        br
                     .narrow-column
                         h3 Services
+                        a(href='/services.html') 3D Modelling and Printing
+                        br
+                        a(href='/services.html') Animation
+                        br
+                        a(href='/services.html') Game Development
+                        br
+                        a(href='/services.html') Graphic Design
+                        br
+                        a(href='/services.html') Interactive Design
+                        br
+                        a(href='/services.html') Marketing Design
+                        br
+                        a(href='/services.html') Product design
+                        br
+                        a(href='/services.html') Web design
+                        br
+                        a(href='/services.html') Web development
+                        br
+                        a(href='/services.html') Video production
+                        br
                     .narrow-column
-                        h3 Case studies
+                        h3 Our work
+                        a(href='/case_studies.html') Case studies
+                        br
+                        a(href='/projects.html') Projects
+                        br
+                        a(href='/contact_us.html') Contact Us
+                        br
                     .narrow-column
                         h3 Find us online
+                        strong ArtStation: 
+                        a(href='https://www.artstation.com/openstudios') openstudios
+                        br
+                        strong Facebook: 
+                        a(href='https://www.facebook.com/openstudiosco') openstudiosco
+                        br
+                        strong Instagram: 
+                        a(href='https://www.instagram.com/openstudiosco/') openstudiosco
+                        br
+                        strong LinkedIn: 
+                        a(href='https://www.linkedin.com/company/open-studios-australia/') Open Studios
+                        br
+                        strong Medium: 
+                        a(href='https://medium.com/@open_studios') @open_studios
+                        br
+                        strong YouTube: 
+                        a(href='https://www.youtube.com/@open-studios') @open-studios
             .row.center
                 if ! isIframe
                     .h1
