--- a/web/assets/1999.css
+++ b/web/assets/1999.css
@@ -259,6 +259,15 @@ form button:hover {
   width: calc(100vw - 4rem);
 }
 
+.content_container.footer .narrow-column a {
+  color: white;
+  text-decoration: none;
+}
+
+.content_container.footer .narrow-column a:hover {
+  text-decoration: underline;
+}
+
 .content {
   display: flex;
   flex-wrap: wrap;
