Replaced footer social links with terms pages

--- a/src/templates/1999_layout.pug
+++ b/src/templates/1999_layout.pug
@@ -113,24 +113,13 @@
                         a(href='/contact_us.html') Contact Us
                         br
                     .narrow-column
-                        h3 Find us online
-                        strong ArtStation: 
-                        a(href='https://www.artstation.com/openstudios') openstudios
+                        h3 Terms
+                        a(href='/accessibility.html') Accessibility
                         br
-                        strong Facebook: 
-                        a(href='https://www.facebook.com/openstudiosco') openstudiosco
+                        a(href='/ai-copyright.html') AI and Copyright Policy
                         br
-                        strong Instagram: 
-                        a(href='https://www.instagram.com/openstudiosco/') openstudiosco
+                        a(href='/privacy.html') Privacy Policy
                         br
-                        strong LinkedIn: 
-                        a(href='https://www.linkedin.com/company/open-studios-australia/') Open Studios
-                        br
-                        strong Medium: 
-                        a(href='https://medium.com/@open_studios') @open_studios
-                        br
-                        strong YouTube: 
-                        a(href='https://www.youtube.com/@open-studios') @open-studios
             .row.center
                 if ! isIframe
                     .h1
