--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -10,7 +10,7 @@ h1 About Us
         |             We are a husband and husband team, plus two dogs and a cat.
   .row
     .column
-      img(src='./assets/images/paul.jpg' style=' width: 100%; height: auto;')
+      img(src='./assets/images/paul.jpg' style=' width: 100%; height: auto;' alt='Selfie of Paul with his two doggos in the car')
       h3
         | Paul Brzeski&nbsp;
         a.icon_button(href='https://linkedin.com/in/paul-b-23620b209/' title='Paul Brzeski on LinkedIn')
@@ -40,11 +40,11 @@ h1 About Us
         li Three.JS
         li VSCode
     .column
-      img(src='./assets/images/garrett.png' style=' width: 100%; height: auto;')
+      img(src='./assets/images/garrett.png' style=' width: 100%; height: auto;' alt='Photo of Garrett studying a whisky blend at a distillery in Scotland' alt='LinkedIn logo')
       h3
         | Garrett Kinder&nbsp;
         a.icon_button(href='https://www.linkedin.com/in/garrett-ray-kinder-361ba6a5/' title='Garrett Kinder on LinkedIn')
-          img(src='./assets/images/linkedin.png')
+          img(src='./assets/images/linkedin.png' alt='LinkedIn logo')
       p
         | Meet Garrett, the embodiment of sophistication and innovation, renowned as an award-winning bartender, expert jeweler, and connoisseur of rare whiskies.
       p
