--- a/src/content/contact_us.pug
+++ b/src/content/contact_us.pug
@@ -30,7 +30,7 @@ h1 Contact us
           });
         }
       
-      form#mailform(method='post' action='https://mailform.openstudios.xyz/')
+      form#mailform(method='post' action='https://mailform.openstudios.xyz/' role="form")
         label(for='name' type='text') Your Name
         br
         input(type='text' name='name' placeholder='Full Name')
