Adding ARIA tags to about us and case studies

--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -40,7 +40,7 @@ h1 About Us
         li Three.JS
         li VSCode
     .column
-      img(src='./assets/images/garrett.png' style=' width: 100%; height: auto;' alt='Photo of Garrett studying a whisky blend at a distillery in Scotland' alt='LinkedIn logo')
+      img(src='./assets/images/garrett.png' style=' width: 100%; height: auto;' alt='Photo of Garrett studying a whisky blend at a distillery in Scotland')
       h3
         | Garrett Kinder&nbsp;
         a.icon_button(href='https://www.linkedin.com/in/garrett-ray-kinder-361ba6a5/' title='Garrett Kinder on LinkedIn')
