--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -1,8 +1,8 @@
 doctype html
-html
+html(lang='en')
     head
         meta(charset='utf-8')
-        meta(name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
+        meta(name='viewport' content='width=device-width, initial-scale=1')
         meta(name="description" content="We are Open Studios. Perth based digital production studio.")
 
         title Open Studios - Perth, Western Australia
