--- a/src/web/privacy.pug
+++ b/src/web/privacy.pug
@@ -6,7 +6,7 @@ dynamicPermalink: false
 extends ../templates/1999_html.pug
 
 block append title
-  | Privacy | Open Studios
+  | Privacy Policy | Open Studios
 
 block append page
   include ../content/privacy.pug
