--- a/src/content/ai-copyright.pug
+++ b/src/content/ai-copyright.pug
@@ -1,4 +1,4 @@
-h2 AI and Copyright
+h2 AI & Copyright
 .content(style='flex-direction: column;')
   p.
     At Open Studios, we are committed to the ethical development and use of artificial intelligence (AI) technology, including generative AI. We believe in fostering innovation, creativity, and respect for intellectual property rights. This statement outlines our principles and guidelines regarding the use of AI and copyrighted works on our platform.
